--- a/css/addProduct.css
+++ b/css/addProduct.css
@@ -113,7 +113,6 @@ tr {
   min-height: 100vh;
   width: calc(100% - 240px);
   left: 240px;
-  /* background-color: yellow; */
   transition: all 0.5s ease;
   overflow-x: hidden;
   overflow-y: visible;
@@ -226,6 +225,7 @@ nav .profile-details i {
 .home-section .home-content {
   position: relative;
   padding-top: 21px;
+  width: 100%;
   /* background-color: teal; */
 }
 
@@ -432,13 +432,13 @@ nav .profile-details i {
 
 .table-wrapper {
   width: 78vw;
-  height: 80vh;
+  height: auto;
   /* margin: 10px 70px 70px; */
   /* box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1); */
   margin-left: auto;
   margin-right: auto;
   margin-top: -5em;
-  /* margin-bottom: -10px; */
+  margin-bottom: 50px;
 }
 
 .fl-table {
@@ -707,7 +707,6 @@ form {
 .flex {
   width: 90%;
   flex-wrap: wrap;
-  flex: 1;
   margin-top: 30px;
   padding: 15px;
   margin-left: auto;
@@ -772,6 +771,15 @@ input[type=submit] {
   align-items: center;
   grid-column: 1/3;
   padding: 15px;
+}
+
+.item-header {
+  text-align: center;
+  grid-column: 1/3;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-family: 'Poppins';
+  letter-spacing: 2px;
 }
 
 .id-div {
