--- a/css/dash.css
+++ b/css/dash.css
@@ -8,6 +8,23 @@
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  overflow-y: scroll;
+  overflow-x: hidden;
+}
+
+body,
+div,
+label,
+tr {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  user-select: none;
+  -ms-user-select: none;
+}
+
 .sidebar {
   position: fixed;
   height: 100%;
@@ -89,12 +106,23 @@
 }
 
 .home-section {
+  /* position: relative;
+  background: #f5f5f5;
+  background: red;
+  min-height: 100vh;
+  height: 100%;
+  width: calc(100% - 240px);
+  left: 240px;
+  transition: all 0.5s ease; */
   position: relative;
   background: #f5f5f5;
   min-height: 100vh;
+  /* height: auto; */
   width: calc(100% - 240px);
   left: 240px;
   transition: all 0.5s ease;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .sidebar.active~.home-section {
@@ -204,6 +232,8 @@ nav .profile-details i {
 .home-section .home-content {
   position: relative;
   padding-top: 104px;
+  width: 100%;
+  /* background: teal; */
 }
 
 .home-content .overview-boxes {
@@ -305,12 +335,10 @@ nav .profile-details i {
 
 .iconify {
   display: inline-block;
-  /* height: inherit; */
-  /* width: 20px; */
+
   position: relative;
   left: 30%;
-  /* background-color: lawngreen; */
-  margin-left: 2em;
+  margin-left: -2em;
 }
 
 .bxs-label {
@@ -319,10 +347,14 @@ nav .profile-details i {
   /* height: 20px; */
 }
 
-.bx-trash {
+tr .bx-trash {
   color: red;
-  font-size: 30px;
-  padding-right: 15px;
+  font-size: 20px;
+  padding-right: 35px;
+}
+
+a>.bx-trash {
+  font-size: 1000px;
 }
 
 /* left box */
@@ -416,12 +448,11 @@ nav .profile-details i {
 
 .table-wrapper {
   width: 78vw;
-  height: 80vh;
-  margin: 10px 70px 70px;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+  height: auto;
+
   margin-left: auto;
   margin-right: auto;
-
+  margin-bottom: 50px;
 }
 
 .fl-table {
@@ -474,7 +505,7 @@ nav .profile-details i {
     content: "Scroll horizontally >";
     display: block;
     text-align: right;
-    font-size: 11px;
+    font-size: 13px;
     color: white;
     padding: 0 0 10px;
   }
@@ -496,7 +527,7 @@ nav .profile-details i {
   .fl-table tbody {
     width: auto;
     position: relative;
-    overflow-x: auto;
+    /* overflow-x: auto; */
   }
 
   .fl-table td,
@@ -506,7 +537,7 @@ nav .profile-details i {
     vertical-align: middle;
     box-sizing: border-box;
     overflow-x: hidden;
-    overflow-y: auto;
+    /* overflow-y: auto; */
     width: 120px;
     font-size: 13px;
     text-overflow: ellipsis;
@@ -645,11 +676,6 @@ span.data {
 span.iconify {
   flex: 1;
   display: inline-block;
-  /* height: inherit; */
-  /* width: 20px; */
-  /* position: relative; */
-  /* left: 30%; */
-  /* background-color: lawngreen; */
   margin-left: -2em;
 }
 
@@ -676,7 +702,6 @@ span.iconify {
   position: fixed;
   top: -300px;
   visibility: hidden;
-  /* background-color: teal; */
 }
 
 
@@ -720,4 +745,154 @@ span.iconify {
   background: #d50000;
   border-color: #ba0000;
   color: #ffffff;
+}
+
+
+.modal {
+  box-sizing: border-box;
+  background-color: rgba(36, 35, 35, 1);
+  color: white;
+  position: fixed;
+  z-index: 450;
+  width: 50%;
+  height: 63%;
+  right: -999px;
+  top: 100px;
+  display: none;
+  transition:
+    right ease-out 3s,
+    visibility 0.2s;
+}
+
+.show {
+  left: 330px;
+  display: block;
+  opacity: 1;
+  animation: fade-slide-in 0.6s ease-out forwards;
+
+}
+
+.text-field {
+  width: 100%;
+  height: 35px;
+  padding-left: 15px;
+  border: none;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+.id-label {
+  text-align: center;
+
+}
+
+.form-wrapperr {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0;
+  align-items: center;
+  width: 80%;
+  height: 90%;
+  padding-top: 15px;
+}
+
+
+
+.flexx {
+  width: 80%;
+  align-items: center;
+  margin-left: 4em;
+  margin-right: auto;
+  padding-left: 10px
+}
+
+.submit-divv {
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  width: 100%;
+}
+
+
+.id-divv {
+  width: 80%;
+  margin-left: 4em;
+  margin-right: auto;
+  align-items: center;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(128, 91, 91, 0.4);
+  z-index: 200;
+  pointer-events: none;
+  display: none;
+}
+
+.show-backdrop {
+  display: block;
+  pointer-events: all;
+}
+
+.exit {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 13px;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 8px;
+  width: 35%;
+  height: 35px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 17px;
+  background-color: red;
+  margin-left: 15px;
+}
+
+.exit:hover {
+  cursor: pointer;
+  /* background-color: #0F4FE6; */
+  border: 1px solid white;
+  transition: background-color .5s;
+}
+
+.flexx label,
+.id-divv label {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 13px;
+  padding-left: 15px;
+  padding-bottom: 10px;
+  color: rgba(255, 255, 255, .7);
+  display: block;
+}
+
+input[type=submit]:hover {
+  cursor: pointer;
+  border: 1px solid white;
+  transition: background-color .5s;
+
+}
+
+input[type=submit] {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 13px;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 8px;
+  width: 35%;
+  height: 35px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 17px;
+  background-color: green;
+  margin-left: 40px;
+  margin-right: auto;
+
 }
