--- a/css/edit.css
+++ b/css/edit.css
@@ -600,7 +600,6 @@ span.iconify {
 }
 
 .container {
-  /* width: 100%; */
   padding-top: 60px;
   padding-bottom: 15px;
 
@@ -625,8 +624,7 @@ span.iconify {
 }
 
 
-form {
-  /* display: flex;   */
+.frame form {
   display: grid;
   grid-template-columns: 1fr 1fr;
 
@@ -638,13 +636,11 @@ form {
   margin-top: 30px;
   padding: 15px;
   width: 32em;
-  /* background-color: teal; */
   margin-left: auto;
   margin-right: auto;
 }
 
 .flex1 {
-  /* background-color: rebeccapurple; */
   margin-right: 2em;
   padding-left: 2em;
 }
@@ -666,7 +662,7 @@ form {
   background: rgba(255, 255, 255, .2);
 }
 
-label {
+.frame label {
   font-weight: 400;
   text-transform: uppercase;
   font-size: 13px;
@@ -687,7 +683,7 @@ label {
   transition: background .5s ease;
 }
 
-input[type=submit] {
+.frame input[type=submit] {
   display: block;
   font-weight: 700;
   font-size: 15px;
@@ -699,7 +695,6 @@ input[type=submit] {
   border: none;
   border-radius: 20px;
   margin-top: 17px;
-  /* background-color: #1059FF; */
   background-color: #4FC3A1;
   margin-left: auto;
   margin-right: auto;
@@ -722,7 +717,7 @@ input[type=submit] {
 }
 
 
-input[type=submit]:hover {
+.frame input[type=submit]:hover {
   cursor: pointer;
   background-color: #0F4FE6;
   transition: background-color .5s;
@@ -732,7 +727,7 @@ input[type=submit]:hover {
   background-color: teal;
 }
 
-/* -----------------------notification */
+/* -----------------------notification------------------- */
 .toast {
   position: fixed;
   top: 0;
@@ -772,4 +767,152 @@ input[type=submit]:hover {
   background: #d50000;
   border-color: #ba0000;
   color: #ffffff;
+}
+
+.modal {
+  box-sizing: border-box;
+  background-color: rgba(36, 35, 35, 1);
+  color: white;
+  position: fixed;
+  z-index: 450;
+  width: 50%;
+  height: 63%;
+  right: -999px;
+  top: 100px;
+  display: none;
+  transition:
+    right ease-out 3s,
+    visibility 0.2s;
+}
+
+.show {
+  left: 330px;
+  display: block;
+  opacity: 1;
+  animation: fade-slide-in 0.6s ease-out forwards;
+
+}
+
+.text-field {
+  width: 100%;
+  height: 35px;
+  padding-left: 15px;
+  border: none;
+  border-radius: 20px;
+  margin-bottom: 20px;
+}
+
+.id-label {
+  text-align: center;
+
+}
+
+.form-wrapperr {
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 0;
+  align-items: center;
+  width: 80%;
+  height: 90%;
+  padding-top: 15px;
+}
+
+
+
+.flexx {
+  width: 80%;
+  align-items: center;
+  margin-left: 4em;
+  margin-right: auto;
+  padding-left: 10px
+}
+
+.submit-divv {
+  align-items: center;
+  justify-content: center;
+  padding: 15px;
+  width: 100%;
+}
+
+
+.id-divv {
+  width: 80%;
+  margin-left: 4em;
+  margin-right: auto;
+  align-items: center;
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+  background: rgba(128, 91, 91, 0.4);
+  z-index: 200;
+  pointer-events: none;
+  display: none;
+}
+
+.show-backdrop {
+  display: block;
+  pointer-events: all;
+}
+
+.exit {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 13px;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 8px;
+  width: 35%;
+  height: 35px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 17px;
+  background-color: red;
+  margin-left: 15px;
+}
+
+.exit:hover {
+  cursor: pointer;
+  border: 1px solid white;
+  transition: background-color .5s;
+}
+
+.flexx label,
+.id-divv label {
+  font-weight: 400;
+  text-transform: uppercase;
+  font-size: 13px;
+  padding-left: 15px;
+  padding-bottom: 10px;
+  color: rgba(255, 255, 255, .7);
+  display: block;
+}
+
+.modal input[type=submit]:hover {
+  cursor: pointer;
+  border: 1px solid white;
+  transition: background-color .5s;
+
+}
+
+.modal input[type=submit] {
+  display: inline-block;
+  font-weight: 700;
+  font-size: 13px;
+  text-align: center;
+  color: #ffffff;
+  padding-top: 8px;
+  width: 35%;
+  height: 35px;
+  border: none;
+  border-radius: 20px;
+  margin-top: 17px;
+  background-color: green;
+  margin-left: 40px;
+  margin-right: auto;
+
 }
