--- a/css/dash.css
+++ b/css/dash.css
@@ -335,10 +335,22 @@ nav .profile-details i {
 
 .iconify {
   display: inline-block;
+  width: 10px;
+  flex: 0.2;
 
-  position: relative;
-  left: 30%;
-  margin-left: -2em;
+}
+
+.qty-data {
+  display: inline-block;
+  width: 10px;
+  left: 10;
+  flex: 2;
+  padding-right: 7em;
+}
+
+.label-cell {
+  display: flex;
+  justify-content: space-between;
 }
 
 .bxs-label {
